--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8">
 </head>
   <body>
     <title>Disorder</title>
-    <h1>Prueba de página</h1>
+    <h1>My First Web Page</h1>
+    <nav>
+      <a href="https://open.spotify.com/playlist/37i9dQZF1DX4Mu7BvpQNsr?si=-cw3vOIpTsqGMklrAvwWEA">One</a>
+      <a href="https://open.spotify.com/album/1HnxC8MLDciii5LebJ09Ko?si=K3vXpUnbQZWn6nKf52Q39A">Two</a>
+      <a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=gcS3FHh7SzG6HSq_B-949A">Three</a>
+      <a href="https://open.spotify.com/playlist/6Q2ujcIbbRbzA9ypb1EeGJ?si=AOYqHU5wTii3JqNAgyWN-w">My playlist</a>
+    </nav>
+
+    <h2>Favorite Foods</h2>
+    <ul>
+      <li>Wathermelons</li><li>Pozole</li><li>Tacos</li>
+      <li>Candies</li><li>Chocolates</li>
+    </ul>
+
+    <h2>Achievements</h2>
+    <p>Progress in this course(100%) <progress value="100" max="100">100%</progress> </p>
+    <p>Progress in the Specialitation capston(20%) <progress value="20" max="100">20%</progress> </p>
+    <p>Progress in life goals(20%) <progress value="20" max="100">20%</progress> </p>
+
+    <h2>More About Me</h2>
+
+    <details>
+      <summary>My childhood</summary>
+      <p>I was born in Mexico. I lived in several neighborhoods,
+         but keep my same childhood friends.</p>
+  </details>
   </body>
+
+  <footer>
+    <p> <img src="img/newlogo.png" alt="Sample image"> This page was created by Alejandro Hernánez & Collen van Lent.
+      To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro To Web Design</a>.</p>
+  </footer>
 </html>
