Actialización de formato

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Disorder</title>
+
+  <link rel="stylesheet" href="css/css1.css">
 </head>
   <body>
     <header>
-      <h1>My First Web Page</h1>
+      <h1>Alejandro</h1>
       <nav>
         <a href="https://open.spotify.com/playlist/37i9dQZF1DX4Mu7BvpQNsr?si=-cw3vOIpTsqGMklrAvwWEA">One</a>
         <a href="https://open.spotify.com/album/1HnxC8MLDciii5LebJ09Ko?si=K3vXpUnbQZWn6nKf52Q39A">Two</a>
