--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=gcS3FHh7SzG6HSq_B-949A">Three</a>
         <a href="https://open.spotify.com/playlist/6Q2ujcIbbRbzA9ypb1EeGJ?si=AOYqHU5wTii3JqNAgyWN-w">My playlist</a>
       </nav>
+
+<!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     </header>
 
     <section>
