--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Disorder</title>
-
+  <link rel="shortcut icon" href="img/png/logo.png">
+  <!-- CSS files-->
   <link rel="stylesheet" href="css/css1.css">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
   <body>
     <header>
       <h1>Alejandro</h1>
@@ -15,10 +21,6 @@
         <a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=gcS3FHh7SzG6HSq_B-949A">Three</a>
         <a href="https://open.spotify.com/playlist/6Q2ujcIbbRbzA9ypb1EeGJ?si=AOYqHU5wTii3JqNAgyWN-w">My playlist</a>
       </nav>
-
-<!-- Fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     </header>
 
     <section>
@@ -29,7 +31,7 @@
         </ul>
     </section>
 
-    <secction>
+    <section>
         <h2>Achievements</h2>
         <p>Progress in this course(100%) <progress value="100" max="100">100%</progress> </p>
         <p>Progress in the Specialitation capston(20%) <progress value="20" max="100">20%</progress> </p>
@@ -38,7 +40,7 @@
 
     <section>
       <h2>More About Me</h2>
-      <details>
+      <details open>
         <summary>My childhood</summary>
         <p>I was born in Mexico. I lived in several neighborhoods,
            but keep my same childhood friends.</p>
