--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Disorder</title>
-  <link rel="shortcut icon" href="img/png/logo.png">
+  <link rel="shortcut icon" href="img/logo.png">
   <!-- CSS files-->
   <link rel="stylesheet" href="css/css1.css">
   <!-- Fonts -->
@@ -13,17 +13,17 @@
 </head>
 
   <body>
-    <header>
+    <header class="opacity texto">
       <h1>Alejandro</h1>
       <nav>
-        <a href="https://open.spotify.com/playlist/37i9dQZF1DX4Mu7BvpQNsr?si=-cw3vOIpTsqGMklrAvwWEA">One</a>
-        <a href="https://open.spotify.com/album/1HnxC8MLDciii5LebJ09Ko?si=K3vXpUnbQZWn6nKf52Q39A">Two</a>
-        <a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=gcS3FHh7SzG6HSq_B-949A">Three</a>
-        <a href="https://open.spotify.com/playlist/6Q2ujcIbbRbzA9ypb1EeGJ?si=AOYqHU5wTii3JqNAgyWN-w">My playlist</a>
+        <a href="https://open.spotify.com/playlist/37i9dQZF1DX4Mu7BvpQNsr?si=-cw3vOIpTsqGMklrAvwWEA" target="_blank">The Cure</a>
+        <a href="https://open.spotify.com/album/1HnxC8MLDciii5LebJ09Ko?si=a0OmS2QmQ-uwFKx3p9o4pA" target="_blank">Joy Division</a>
+        <a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=gcS3FHh7SzG6HSq_B-949A" target="_blank">The Black Keys</a>
+        <a href="https://open.spotify.com/playlist/6Q2ujcIbbRbzA9ypb1EeGJ?si=AOYqHU5wTii3JqNAgyWN-w" target="_blank">My playlist</a>
       </nav>
     </header>
 
-    <section>
+    <section class="half">
         <h2>Favorite Foods</h2>
         <ul>
           <li>Wathermelons</li><li>Pozole</li><li>Tacos</li>
@@ -31,14 +31,14 @@
         </ul>
     </section>
 
-    <section>
+    <section class="half">
         <h2>Achievements</h2>
         <p>Progress in this course(100%) <progress value="100" max="100">100%</progress> </p>
         <p>Progress in the Specialitation capston(20%) <progress value="20" max="100">20%</progress> </p>
         <p>Progress in life goals(20%) <progress value="20" max="100">20%</progress> </p>
     </section>
 
-    <section>
+    <section class="whole">
       <h2>More About Me</h2>
       <details open>
         <summary>My childhood</summary>
