--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         <p>Progress in life goals(20%) <progress value="20" max="100">20%</progress> </p>
     </section>
 
+    <div class="animate">
+        <h2>My favourites albums </h2>
+        <img src="img/closer.jpg" alt="Closer by Joy Divison">
+        <img src="img/queen.jpg" alt="The Quen is Dead by The Smiths">
+        <img src="img/villians.jpg" alt="Villians by Queens of the Stone Age">
+    </div>
+
     <section class="whole">
       <h2>More About Me</h2>
       <details open>
