Cambio de estilo y estructura

--- a/music.html
+++ b/music.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@200&display=swap" rel="stylesheet">
+
 </head>
 
   <body>
@@ -25,22 +26,12 @@
       </nav>
     </header>
 
-    <section class="me">
-        <h2>ACERCA DE MÍ</h2>
-        <p>Creé esta página web como un proyecto que quería desarrollar desde cero. Soy estudiante de
-        la Facultad de Ingeniería de la UNAM, y uno de los campos que más llaman mi atención es el
-        desarrollo web. Aún estoy aprenddiendo, y no se mucho sobre diseno, pero conforme siga
-        este trabajo, espero mejorar y darle un mejor aspecto a todo el diseño.</p>
-    </section>
-
-    <div class="me-img">
-      <img src="https://consejofi.fi-a.unam.mx/images/EscudoFIVectorizadoNegro2008PPNGx5.png" alt="Escudo de la Falcutad de Ingeniería UNAM">
+    <div class="animate">
+        <h2>My favourites albums </h2>
+        <img src="img/closer.jpg" alt="Closer by Joy Divison">
+        <img src="img/queen.jpg" alt="The Quen is Dead by The Smiths">
+        <img src="img/villians.jpg" alt="Villians by Queens of the Stone Age">
     </div>
-
-    <section class="about">
-      <h2>SOBRE LA PÁGINA</h2>
-
-    </section>
 
     <footer>
       <p> <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Sample image"> This page was created by Alejandro Hernánez & Collen van Lent.
