Añadiendo páginas y contenido

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <header class="opacity texto">
       <h1>Alejandro</h1>
       <nav>
-        <a href="index.html">Inicio</a>
+        <a class="active" href="index.html">Inicio</a>
         <a href="music.html">Música</a>
-        <a href="">Películas</a>
-        <a href="">Series</a>
-        <a href="">Libros</a>
+        <a href="movies.html">Películas & Series</a>
+        <a href="books.html">Libros</a>
       </nav>
     </header>
+
+<div class="container">
 
     <section class="me">
         <h2>ACERCA DE MÍ</h2>
@@ -31,20 +32,20 @@
         la Facultad de Ingeniería de la UNAM, y uno de los campos que más llaman mi atención es el
         desarrollo web. Aún estoy aprenddiendo, y no se mucho sobre diseno, pero conforme siga
         este trabajo, espero mejorar y darle un mejor aspecto a todo el diseño.</p>
+        <img src="https://consejofi.fi-a.unam.mx/images/EscudoFIVectorizadoNegro2008PPNGx5.png" alt="Escudo de la Falcutad de Ingeniería UNAM">
     </section>
-
-    <div class="me-img">
-      <img src="https://consejofi.fi-a.unam.mx/images/EscudoFIVectorizadoNegro2008PPNGx5.png" alt="Escudo de la Falcutad de Ingeniería UNAM">
-    </div>
 
     <section class="about">
       <h2>SOBRE LA PÁGINA</h2>
-
+      <p>El contenido va sobre gustos personales, y como podrán darse cuenta, los dividí por categorias
+      como se muestra en la barra de navegación. Las actualizaciones serán semanales, y los temas darán
+      recomendaciones y reseñas. El repositorio de la página sera público en caso de que exista interés en
+      como se fue construyendo y como evolucionó.</p>
     </section>
 
+</div>
     <footer>
-      <p> <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Sample image"> This page was created by Alejandro Hernánez & Collen van Lent.
-        To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro To Web Design</a>.</p>
+      <p> <img src="img/internet.png" alt="Sample image"> This page was created by Alejandro Hernánez </p>
     </footer>
 
   </body>
