--- a/music.html
+++ b/music.html
@@ -15,27 +15,42 @@
 </head>
 
   <body>
+
+  <!--  <script>
+      var name = prompt("What is your name? ");
+      document.write(name);
+      document.write("<h1>"+name+"</h1>");
+      document.write(document.baseURI+"<br>");
+      document.write(document.ttitle+"<br>");
+    </script> -->
     <header class="opacity texto">
       <h1>Alejandro</h1>
       <nav>
         <a href="index.html">Inicio</a>
-        <a href="music.html">Música</a>
-        <a href="">Películas</a>
-        <a href="">Series</a>
-        <a href="">Libros</a>
+        <a class="active" href="music.html">Música</a>
+        <a href="movies.html">Películas & Series</a>
+        <a href="books.html">Libros</a>
       </nav>
     </header>
 
-    <div class="animate">
+    <div class="albums">
         <h2>My favourites albums </h2>
-        <img src="img/closer.jpg" alt="Closer by Joy Divison">
-        <img src="img/queen.jpg" alt="The Quen is Dead by The Smiths">
-        <img src="img/villians.jpg" alt="Villians by Queens of the Stone Age">
+        <ul class="gallery">
+          <li><a href="https://open.spotify.com/album/0KBdfMTMxi0oD1oVqApTjr?si=RFLkzRdZR0uxkcpQMy13TA" target="_blank"><img src="img/a1.jpg" alt="Closer by Joy Divison"></a></li>
+          <li><a href="https://open.spotify.com/album/4wy9Np1Skr6jQ46nrbFQ8L?si=k-tspiOZTv67OXmzMnsUjw" target="_blank"><img src="img/a2.jpg" alt="A Night at the Opero by Queen"></a></li>
+          <li><a href="https://open.spotify.com/album/7uUltiwqvVn8Uy23Hdf1kE?si=slZVZ2kFQFSgllrw5U8XQQ" target="_blank"><img src="img/a3.jpeg" alt="Desintegation by The Cure"></a></li>
+          <li><a href="https://open.spotify.com/album/6JdX9MGiEMypqYLMKyIE8a?si=MXmVSI9pQVew1I_h0aH3KA" target="_blank"><img src="img/a4.jpg" alt="Villians by Queens of the Stone Age"></a></li>
+          <li><a href="https://open.spotify.com/album/5Dgqy4bBg09Rdw7CQM545s?si=Hkp5dlJ0T4OKWO2XhZcjsg" target="_blank"><img src="img/a5.jpg" alt="Unknown Pleassures by Joy Division"></a></li>
+          <li><a href="https://open.spotify.com/album/6TvxpBzf9c8H1fsrAaQ8t3?si=02KHbm_7S0Ooiz_KonCr0A" target="_blank"><img src="img/a6.jpg" alt="Turn Blue by The Black Keys"></a></li>
+          <li><a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu?si=8hWxdeG8SbScJQPOThuUNg" target="_blank"><img src="img/a7.jpg" alt="AM by Arctic Monkeys"></a></li>
+          <li><a href="https://open.spotify.com/album/2yNaksHgeMQM9Quse463b5?si=5F-0bThiTFKqcdvUl9RIsA" target="_blank"><img src="img/a8.jpg" alt="Is this it by The Strokes"></a></li>
+          <li><a href="https://open.spotify.com/album/5Y0p2XCgRRIjna91aQE8q7?si=CdF-xhO_SoWnUEepPtsWGg" target="_blank"><img src="img/a9.jpg" alt="The Queen is Dead by The Smiths"></a></li>
+          <li><a href="https://open.spotify.com/album/5h6Nt39jh7BYXDNVjcw2fF?si=sfYXnKIFShSQiGlsIaezpw" target="_blank"><img src="img/a10.jpg" alt="Zipper Down by Eagles of the Death Metal"></a></li>
+        </ul>
     </div>
 
     <footer>
-      <p> <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Sample image"> This page was created by Alejandro Hernánez & Collen van Lent.
-        To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro To Web Design</a>.</p>
+      <p> <img src="img/internet.png" alt="Sample image"> This page was created by Alejandro Hernánez </p>
     </footer>
 
   </body>
